--- a/projects/authsure-angular/package.json
+++ b/projects/authsure-angular/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "authsure-angular",
+  "name": "@nr1etech/authsure-angular",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^16.2.0",
-    "@angular/core": "^16.2.0"
+    "@angular/common": "^14.1.0",
+    "@angular/core": "^14.1.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@angular/animations": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "crypto-js": "^4.1.1",
+    "jose": "^4.10.3",
+    "rxjs": "~7.5.0"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.1.1"
   },
   "sideEffects": false,
   "repository": {
