--- a/projects/authsure-angular/package.json
+++ b/projects/authsure-angular/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^14.1.0",
-    "@angular/core": "^14.1.0"
-  },
-  "dependencies": {
-    "tslib": "^2.3.0",
+    "@angular/core": "^14.1.0",
     "@angular/animations": "^14.1.0",
     "@angular/forms": "^14.1.0",
     "@angular/material": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "crypto-js": "^4.1.1",
     "jose": "^4.10.3",
-    "rxjs": "~7.5.0"
+    "rxjs": "~7.8.0"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1"
