--- a/projects/authsure-angular/package.json
+++ b/projects/authsure-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nr1etech/authsure-angular",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.0",
   "peerDependencies": {
     "@angular/common": "^14.1.0",
     "@angular/core": "^14.1.0",
