--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "authsure-angular",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "cd projects/authsure-angular && pnpm i --frozen-lockfile && cd ../..",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -34,6 +35,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^14.1.0",
+    "typedoc": "^0.25.7",
     "typescript": "~4.7.2"
   },
   "engines": {
