--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "authsure-angular",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "scripts": {
     "postinstall": "cd projects/authsure-angular && pnpm i --frozen-lockfile && cd ../..",
     "ng": "ng",
