--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "authsure-angular",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.0",
   "scripts": {
     "postinstall": "cd projects/authsure-angular && pnpm i --frozen-lockfile && cd ../..",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "echo 'TODO Fix me later' || ng test"
+    "test": "echo 'TODO Fix me later' || ng test",
+    "publish": "cd projects/authsure-angular && pnpm publish && cd ../.."
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/schematics": "1.0.0",
     "@angular/animations": "^14.1.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
