--- a/package.json
+++ b/package.json
@@ -12,21 +12,8 @@
     "publish": "cd projects/authsure-angular && pnpm publish && cd ../.."
   },
   "private": true,
-  "dependencies": {
-    "@angular-eslint/schematics": "1.0.0",
-    "@angular/animations": "^14.1.0",
-    "@angular/common": "^14.1.0",
-    "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/platform-browser": "^14.1.0",
-    "@angular/platform-browser-dynamic": "^14.1.0",
-    "@angular/router": "^14.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
-  },
   "devDependencies": {
+    "@angular-eslint/schematics": "1.0.0",
     "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
@@ -40,6 +27,27 @@
     "ng-packagr": "^14.1.0",
     "typedoc": "^0.25.7",
     "typescript": "~4.7.2"
+  },
+  "dependencies": {
+    "@angular/animations": "^14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/router": "^14.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
+  },
+  "peerDependencies": {
+    "@angular/common": ">=14.1.0",
+    "@angular/core": ">=14.1.0",
+    "@angular/forms": ">=14.1.0",
+    "@angular/router": ">=14.1.0",
+    "rxjs": ">=7.4.0",
+    "tslib": ">=2.3.0"
   },
   "engines": {
     "pnpm": "^8.1.0",
