--- a/projects/authsure-angular/package.json
+++ b/projects/authsure-angular/package.json
@@ -16,15 +16,15 @@
   },
   "homepage": "https://github.com/nr1etech/authsure-angular#readme",
   "peerDependencies": {
-    "@angular/common": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/animations": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/material": "^14.1.0",
-    "@angular/platform-browser": "^14.1.0",
-    "crypto-js": "^4.1.1",
-    "jose": "^4.10.3",
-    "rxjs": "~7.8.0"
+    "@angular/common": ">=14.1.0",
+    "@angular/core": ">=14.1.0",
+    "@angular/animations": ">=14.1.0",
+    "@angular/forms": ">=14.1.0",
+    "@angular/material": ">=14.1.0",
+    "@angular/platform-browser": ">=14.1.0",
+    "crypto-js": ">=4.1.1",
+    "jose": ">=4.10.3",
+    "rxjs": ">=7.8.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
