--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
   "private": true,
   "dependencies": {
     "@angular-eslint/schematics": "1.0.0",
-    "@angular/animations": "^14.1.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -37,7 +35,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^14.1.0",
+    "ng-packagr": "14.1.0",
     "typedoc": "^0.25.7",
     "typescript": "~4.7.2"
   },
